tests/fixtures/invalid/max_dict_str.py
# Cannot call max() with Dict[str, int], Str
x = max({"a": 1}, "hello")
